--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "acacha/admin-lte-template-laravel": "^6.0",
         "caffeinated/shinobi": "^3.2",
         "fideloper/proxy": "^4.0",
+        "genealabs/laravel-maps": "^0.5.8",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
